--- a/sys/amiga/Makefile.ami
+++ b/sys/amiga/Makefile.ami
@@ -1,7 +1,7 @@
 #	NetHack Makefile.
 # Copyright (c) Kenneth Lorber, Bethesda, Maryland, 1991,1992,1993,1996.
 # NetHack may be freely redistributed.  See license for details.
-# Edited on 3/1/18 by NullCGT
+# Edited on 3/22/18 by NullCGT
 
 ###
 ### INTRODUCTION
@@ -512,7 +512,8 @@ INSTDUNGEONFILES1= \
 	$(SLIB)soko3-2.lev	$(SLIB)soko4-1.lev	$(SLIB)soko4-2.lev \
 	$(SLIB)tower1.lev	$(SLIB)tower2.lev	$(SLIB)tower3.lev \
 	$(SLIB)valley.lev	$(SLIB)water.lev	$(SLIB)wizard1.lev \
-	$(SLIB)wizard2.lev	$(SLIB)wizard3.lev \
+	$(SLIB)wizard2.lev	$(SLIB)wizard3.lev $(SLIB)foogardens.lev \
+	$(SLIB)mephisto.lev $(SLIB)void.lev $(SLIB)statuary.lev
 	$(XDFILES)
 
 INSTDUNGEONFILES= $(NETHACK)NetHack.cnf $(INSTDUNGEONFILES1)
@@ -1081,7 +1082,8 @@ $(SLIB)astral.lev:	$(DAT)endgame.des $(SBIN)lev_comp
 #none
 
 GEHENNOM1= $(SLIB)asmodeus.lev $(SLIB)baalz.lev $(SLIB)juiblex.lev \
-  $(SLIB)orcus.lev $(SLIB)sanctum.lev
+  $(SLIB)orcus.lev $(SLIB)sanctum.lev $(SLIB)foogardens.lev \
+	$(SLIB)mephisto.lev
 $(GEHENNOM1):	$(SLIB)valley.lev
 
 $(SLIB)valley.lev:	$(DAT)gehennom.des $(SBIN)lev_comp
