--- a/sys/amiga/Makefile.ami
+++ b/sys/amiga/Makefile.ami
@@ -1,7 +1,7 @@
 #	NetHack Makefile.
 # Copyright (c) Kenneth Lorber, Bethesda, Maryland, 1991,1992,1993,1996.
 # NetHack may be freely redistributed.  See license for details.
-# Edited on 3/22/18 by NullCGT
+# Edited on 3/29/18 by NullCGT
 
 ###
 ### INTRODUCTION
@@ -435,6 +435,10 @@ CDFILES= $(SLIB)Cav-goal.lev $(CDFILES1)
 CRFILES1= $(SLIB)Car-fila.lev $(SLIB)Car-filb.lev $(SLIB)Car-loca.lev \
 	$(SLIB)Car-strt.lev
 CRFILES= $(SLIB)Car-goal.lev $(CRFILES1)
+
+DRFILES1= $(SLIB)Dra-fila.lev $(SLIB)Dra-filb.lev $(SLIB)Dra-loca.lev \
+	$(SLIB)Dra-strt.lev
+DRFILES= $(SLIB)Dra-goal.lev $(DRFILES1)
 
 HDFILES1= $(SLIB)Hea-fila.lev $(SLIB)Hea-filb.lev $(SLIB)Hea-loca.lev \
 	$(SLIB)Hea-strt.lev
@@ -1158,6 +1162,12 @@ $(CRFILES1):	$(SLIB)Car-goal.lev
 
 $(SLIB)Car-goal.lev:	$(DAT)Cartomancer.des $(SBIN)lev_comp
 #SFD_INSTEAD $(SBIN)lev_comp $(DAT)Cartomancer.des
+#none
+
+$(CRFILES1):	$(SLIB)Dra-goal.lev
+
+$(SLIB)Dra-goal.lev:	$(DAT)Drag.des $(SBIN)lev_comp
+#SFD_INSTEAD $(SBIN)lev_comp $(DAT)Drag.des
 #none
 
 $(HDFILES1):	$(SLIB)Hea-goal.lev
