--- a/sys/msdos/Makefile.GCC
+++ b/sys/msdos/Makefile.GCC
@@ -2,7 +2,7 @@
 #	Copyright (c) NetHack PC Development Team 1996-2006.
 #	PC NetHack 3.6 Makefile for djgpp V2
 #
-# Edited on 3/1/18 by NullCGT
+# Edited on 3/29/18 by NullCGT
 #
 #	Gnu gcc compiler for msdos (djgpp)
 #	Requires Gnu Make utility (V3.79.1 or greater) supplied with djgpp
@@ -964,7 +964,7 @@ $(O)sp_lev.tag: $(O)utility.tag $(DAT)/bigroom.des  $(DAT)/castle.des \
 	$(DAT)/monk.des      $(DAT)/priest.des   $(DAT)/ranger.des \
 	$(DAT)/rogue.des     $(DAT)/samurai.des  $(DAT)/tourist.des \
 	$(DAT)/valkyrie.des  $(DAT)/wizard.des $(DAT)/cartomancer.des \
-	$(DAT)/void.des      $(DAT)/statuary.des
+	$(DAT)/void.des      $(DAT)/statuary.des $(DAT)/drag.des
 	@$(subst /,\,cd $(DAT))
 	@$(subst /,\,$(U)lev_comp bigroom.des)
 	@$(subst /,\,$(U)lev_comp castle.des)
@@ -983,6 +983,7 @@ $(O)sp_lev.tag: $(O)utility.tag $(DAT)/bigroom.des  $(DAT)/castle.des \
 	@$(subst /,\,$(U)lev_comp barb.des)
 	@$(subst /,\,$(U)lev_comp cartomancer.des)
 	@$(subst /,\,$(U)lev_comp caveman.des)
+	@$(subst /,\,$(U)lev_comp drag.des)
 	@$(subst /,\,$(U)lev_comp healer.des)
 	@$(subst /,\,$(U)lev_comp knight.des)
 	@$(subst /,\,$(U)lev_comp monk.des)
