--- a/sys/msdos/Makefile.MSC
+++ b/sys/msdos/Makefile.MSC
@@ -2,7 +2,7 @@
 #	Copyright (c) NetHack PC Development Team 1997 - 2012.
 #	PC NetHack 3.4x Makefile for MSC V1.52c (16 bit compiler)
 #
-# Edited 3/22/18 by NullCGT
+# Edited 3/29/18 by NullCGT
 #
 #	For questions or comments: nethack-bugs@nethack.org
 #
@@ -151,7 +151,7 @@ SPLEVDES = $(DAT)\Arch.des $(DAT)\Barb.des $(DAT)\bigroom.des \
 	$(DAT)\Ranger.des $(DAT)\Rogue.des $(DAT)\Samurai.des \
 	$(DAT)\Tourist.des $(DAT)\tower.des $(DAT)\Valkyrie.des \
 	$(DAT)\Wizard.des $(DAT)\yendor.des $(DAT)\Cartomancer.des \
-	$(DAT)\void.des   $(DAT)\statuary.des
+	$(DAT)\void.des   $(DAT)\statuary.des $(DAT)\Drag.des
 
 VGAOBJ      = vidvga.o
 
@@ -433,6 +433,7 @@ $(O)sp_lev.tag: $(O)utility.tag $(SPLEVDES)
 	$(U)lev_comp barb.des
 	$(U)lev_comp cartomancer.des
 	$(U)lev_comp caveman.des
+	$(U)lev_comp drag.des
 	$(U)lev_comp healer.des
 	$(U)lev_comp knight.des
 	$(U)lev_comp monk.des
@@ -979,6 +980,11 @@ nhdat:	$(U)dlb_main.exe $(DAT)\data $(DAT)\oracles $(DAT)\options \
 	echo CAR-GOAL.LEV  >>dlb.lst
 	echo CAR-LOCA.LEV  >>dlb.lst
 	echo CAR-STRT.LEV  >>dlb.lst
+	echo DRA-FILA.LEV  >>dlb.lst
+	echo DRA-FILB.LEV  >>dlb.lst
+	echo DRA-GOAL.LEV  >>dlb.lst
+	echo DRA-LOCA.LEV  >>dlb.lst
+	echo DRA-STRT.LEV  >>dlb.lst
 	echo EARTH.LEV     >>dlb.lst
 	echo FAKEWIZ1.LEV  >>dlb.lst
 	echo FAKEWIZ2.LEV  >>dlb.lst
