--- a/sys/unix/Makefile.dat
+++ b/sys/unix/Makefile.dat
@@ -1,7 +1,7 @@
 #	NetHack Makefile.
 # NetHack 3.6  Makefile.dat	$NHDT-Date: 1447844574 2015/11/18 11:02:54 $  $NHDT-Branch: master $:$NHDT-Revision: 1.18 $
 
-# Edited on 3/1/18 by NullCGT
+# Edited on 3/29/18 by NullCGT
 
 # Root of source tree:
 NHSROOT=..
@@ -148,11 +148,12 @@ spec_levs: ../util/lev_comp \
 quest_levs: ../util/lev_comp \
 	Arch.des Barb.des Caveman.des Cartomancer.des Healer.des Knight.des Monk.des \
 	Priest.des Ranger.des Rogue.des Samurai.des Tourist.des Valkyrie.des \
-	Wizard.des
+	Wizard.des Drag.des
 	../util/lev_comp Arch.des
 	../util/lev_comp Barb.des
 	../util/lev_comp Cartomancer.des
 	../util/lev_comp Caveman.des
+	../util/lev_comp Drag.des
 	../util/lev_comp Healer.des
 	../util/lev_comp Knight.des
 	../util/lev_comp Monk.des
