--- a/sys/unix/Makefile.utl
+++ b/sys/unix/Makefile.utl
@@ -138,12 +138,12 @@ ACTUAL_CXX := $(CXX)
 ACTUAL_LD := $(LD)
 ACTUAL_LINK := $(LINK)
 
-CC_V0 = @echo "[CC] $<"; $(ACTUAL_CC)
+CC_V0 = @echo "[CC] $@"; $(ACTUAL_CC)
 CC_V = $(CC_V0)
 CC_V1 = $(ACTUAL_CC)
 CC = $(CC_V$(VERBOSEMAKE))
 
-CXX_V0 = @echo "[CXX] $<"; $(ACTUAL_CXX)
+CXX_V0 = @echo "[CXX] $@"; $(ACTUAL_CXX)
 CXX_V = $(CXX_V0)
 CXX_V1 = $(ACTUAL_CXX)
 CXX = $(CXX_V$(VERBOSEMAKE))
