--- a/win/win32/vs2015/files.props
+++ b/win/win32/vs2015/files.props
@@ -79,7 +79,9 @@
     <Levfiles Include = "orcus.lev"/>
     <Levfiles Include = "sanctum.lev"/>
     <Levfiles Include = "valley.lev"/>
-    <Levfiles Include = "knox.lev"/>
+    <Levfiles Include = "knox-1.lev"/>
+    <Levfiles Include = "knox-2.lev"/>
+    <Levfiles Include = "knox-3.lev"/>
     <Levfiles Include = "minefill.lev"/>
     <Levfiles Include = "minend-1.lev"/>
     <Levfiles Include = "minend-2.lev"/>
