--- a/sys/unix/Makefile.dat
+++ b/sys/unix/Makefile.dat
@@ -153,7 +153,7 @@ spec_levs: ../util/lev_comp \
 quest_levs: ../util/lev_comp \
 	Arch.des Barb.des Caveman.des Cartomancer.des Healer.des Knight.des Monk.des \
 	Priest.des Ranger.des Rogue.des Samurai.des Tourist.des Valkyrie.des \
-	Wizard.des Drag.des
+	Wizard.des Drag.des Pirate.des
 	../util/lev_comp Arch.des
 	../util/lev_comp Barb.des
 	../util/lev_comp Cartomancer.des
@@ -162,6 +162,7 @@ quest_levs: ../util/lev_comp \
 	../util/lev_comp Healer.des
 	../util/lev_comp Knight.des
 	../util/lev_comp Monk.des
+	../util/lev_comp Pirate.des
 	../util/lev_comp Priest.des
 	../util/lev_comp Ranger.des
 	../util/lev_comp Rogue.des
