--- a/sys/unix/Makefile.dat
+++ b/sys/unix/Makefile.dat
@@ -134,7 +134,8 @@ options:	../util/makedefs
 
 spec_levs: ../util/lev_comp \
 	bigroom.des castle.des endgame.des gehennom.des knox.des medusa.des \
-	mines.des oracle.des sokoban.des statuary.des tower.des void.des yendor.des
+	mines.des oracle.des sokoban.des statuary.des tower.des void.des yendor.des \
+	blkmar.des
 	../util/lev_comp bigroom.des
 	../util/lev_comp castle.des
 	../util/lev_comp endgame.des
@@ -148,6 +149,7 @@ spec_levs: ../util/lev_comp \
 	../util/lev_comp tower.des
 	../util/lev_comp void.des
 	../util/lev_comp yendor.des
+	../util/lev_comp blkmar.des
 	touch spec_levs
 
 quest_levs: ../util/lev_comp \
